Make privacy policy static html page

--- a/docker/nginx/user_conf.d/server.conf
+++ b/docker/nginx/user_conf.d/server.conf
@@ -32,7 +32,7 @@ server {
             set $fallback_file /null;
         }
 
-        try_files $uri $fallback_file;
+        try_files $uri $uri/ $fallback_file;
     }
 
   }
