--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,14 +12,10 @@ jobs:
     strategy:
       matrix:
         include:
-          - tags: ${{ secrets.DOCKER_HUB_USERNAME }}/wr-pomodoro-site:latest
+          - image: wr-pomodoro-site
             dockerfile: ./Dockerfile
-            cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/wr-pomodoro-site:buildcache
-            cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/wr-pomodoro-site:buildcache,mode=max
-          - image: ${{ secrets.DOCKER_HUB_USERNAME }}/wr-pomodoro-site-app-data:latest
+          - image: wr-pomodoro-site-app-data
             dockerfile: ./Dockerfile_app_data
-            cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/wr-pomodoro-site-app-data:buildcache
-            cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/wr-pomodoro-site-app-data:buildcache,mode=max
 
     steps:
       - name: Checkout
@@ -37,6 +33,6 @@ jobs:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: ${{ matrix.tags }}
-          cache-from: ${{ matrix.cache-from }}
-          cache-to: ${{ matrix.cache-to }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ matrix.image }}:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ matrix.image }}:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ matrix.image }}:buildcache,mode=max
