--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,3 +36,4 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ matrix.image }}:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ matrix.image }}:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ matrix.image }}:buildcache,mode=max
+          platforms: linux/amd64,linux/arm64
